@@ -1,4 +1,4 @@
-PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.2.0)
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.4.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
