@@ -1,3 +1,7 @@
+2004-05-14  Andreas Rottmann  <a.rottmann@gmx.at>
+
+	* glib.scm: Reorder module imports so <gclosure> is visible again.
+
 2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>
 
 	* gtk.scm (on-get-flags): Provide default implementation returning 0.
